--- a/styles.css
+++ b/styles.css
@@ -8,40 +8,35 @@ body {
     font-size: 15px;
     font-family: 'Outfit', sans-serif;
 }
-
 .wrapper {
     display: flex;
     flex-direction: column;
-    min-width: 10%;
-    min-height: 30%;
+    width: 350px;
+    height: 500px;
+    margin: auto;
+    margin-top: 8%;
     align-items: center;
     justify-content: center;
     background-color: hsl(0, 0%, 100%);
     border-radius: 5%;
-
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.2);
 }
 .flex-item {
     text-align: center;
 }
 .img-box {
-    margin: 2%;
-    width: 15em;
-    height: 13em;
+    width: 21em;
+    height: 20em;
     background-image: url(./images/image-qr-code.png);
     background-size: cover;
     background-position: center;
     border-radius: 5%;
 }
 
-.bold-text {
-    font-weight: bold;
-
-}
 .plain-text {
-    font-weight: normal;
-
+    font-weight: 400;
+    color: hsl(220, 15%, 55%);
 }
-
 
 .reference {
     font-size: 11px; 
